--- a/SEMANA 3/ejercicio 2.html
+++ b/SEMANA 3/ejercicio 2.html
@@ -21,13 +21,29 @@
      <a href="http://www.incap.edu.co" target="_blank">IR A INCAP - Q10</a><br><br>
      <a href="http://www.unigermana.edu.co" target="_blank">IR A UNIGERMANA- CARRERAS PROFESIONALES</a><br><br>
      <a href="http://www.as.com" target="_blank">VER NOTICIAS DEPORTIVAS EN AS</a><br><br>
-     <a href="web1.html" target="_blank">VER TALLER HTMLSEMANA 2</a><br><br></center>
+     <a href="web1.html" target="_blank">VER TALLER HTML SEMANA 2</a><br><br></center>
      <hr>
      <!--seccion redes sociales-->
      <center><img src="img/facebook.jpeg" width="100" height="90" alt="facebook">
+     <center><img src="img/twitter.jpeg" width="100" height="90" alt="twitter">
+     <center><img src="img/instagram.jpeg" width="100" height="90" alt="instagram"></center>
+     <br><br><br>
+     <hr>
+     <!--seccion videos embebidos-->
+     <h2 align="center">SECCION DE VIDEOS EMBEBIDOS</h2>
+     <br>
+         <center><iframe width="560" height="315" src="https://www.youtube.com/watch?v=Im6Xi0khL8Q&t=2283s" frameborder="0" a </center>
+    <br>
+    <hr>
+    <h3 align="center">PROGRAMA DE DISEÑO GRAFICO</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea ratione, minima mollitia eius, soluta voluptatum nostrum dolorum sequi nobis modi nulla repudiandae, reiciendis porro. Consequatur atque architecto vero cum.</p>
+    
 
-
-
-
-
+    <p>At risus viverra adipisicing at in tellus integer feugiat scelerisque. Varius quam quisque id diam vel. Sit
+    </p>
+    <br>
+    <!--Anclaje interno con imagen-->
+    <center><a href="#INICIO"><img src="img/inicio.jpg" width=80 height=70 alt="inicio"></a></center>
+    <br>
+</body>
 </html>
