--- a/SEMANA 3/ejercicio 2.html
+++ b/SEMANA 3/ejercicio 2.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HIPERVINCULOS WEB</title>
 </head>
 <body>
     
 <body bgcolor="pink">
- <marquee bgcolor=lightblue behavior="alternate" direction="right" 
- style="font-size:35px;">PAGINA WEB HIPERVINCULOS</marques>
-     <!-- un anclaje interno-->
-     <a name="INICIO"></a><br>
-     <!--seccion de hipervinculos-->
-     <h1 align="center">SECCION HIPERVINCULOS</h1>
+    <h1>PAGINA DE HIPERVINCULOS</h1><br>
+ <marquee  behavior="alternate" direction="right" >PAGINA WEB DE HIPERVINCULOS</marquee>
+     <!-- un enlace interno-->
+     <a name="inicio"></a><br>
+     <!--SECCION DE HIPERVINCULOS-->
+     <h1 align="center">SECCION HIPERENLACES</h1>
      <br><center>
      <a href="http://www.youtube.com" target="_blank">VER VIDEOS YOUTUBE</a><br><br>
      <a href="http://www.eltiempo.com" target="_blank">VER NOTICIAS EL TIEMPO</a><br><br>
@@ -22,28 +22,19 @@
      <a href="http://www.unigermana.edu.co" target="_blank">IR A UNIGERMANA- CARRERAS PROFESIONALES</a><br><br>
      <a href="http://www.as.com" target="_blank">VER NOTICIAS DEPORTIVAS EN AS</a><br><br>
      <a href="web1.html" target="_blank">VER TALLER HTML SEMANA 2</a><br><br></center>
-     <hr>
-     <!--seccion redes sociales-->
+     <hr>                           
+     <!--SECCION DE REDES SOCIALES-->
+     <h2 align="center"> SECCION DE REDES SOCIALES</h2>
      <center><img src="img/facebook.jpeg" width="100" height="90" alt="facebook">
-     <center><img src="img/twitter.jpeg" width="100" height="90" alt="twitter">
-     <center><img src="img/instagram.jpeg" width="100" height="90" alt="instagram"></center>
+             <img src="img/twitter.jpeg" width="100" height="90" alt="twitter">
+             <img src="img/instagram.jpeg" width="100" height="90" alt="instagram"></center>
      <br><br><br>
      <hr>
      <!--seccion videos embebidos-->
-     <h2 align="center">SECCION DE VIDEOS EMBEBIDOS</h2>
+     <h2 align="center">SECCION DE VIDEOS EMBEBIDOS</h2> 
      <br>
-         <center><iframe width="560" height="315" src="https://www.youtube.com/watch?v=Im6Xi0khL8Q&t=2283s" frameborder="0" a </center>
-    <br>
-    <hr>
-    <h3 align="center">PROGRAMA DE DISEÑO GRAFICO</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ea ratione, minima mollitia eius, soluta voluptatum nostrum dolorum sequi nobis modi nulla repudiandae, reiciendis porro. Consequatur atque architecto vero cum.</p>
+         <center><iframe width="560" height="315" src="https://www.youtube.com/embed/rbuYtrNUxg4" frameborder="0"></iframe> </center>
+    <a href="#inicio"><img src="img/inicio.jpg" alt="" width="100" height="90"></a>
     
-
-    <p>At risus viverra adipisicing at in tellus integer feugiat scelerisque. Varius quam quisque id diam vel. Sit
-    </p>
-    <br>
-    <!--Anclaje interno con imagen-->
-    <center><a href="#INICIO"><img src="img/inicio.jpg" width=80 height=70 alt="inicio"></a></center>
-    <br>
 </body>
 </html>
